# smtc2web

./: .eslintrc-auto-import.json  .gitignore  .gitmodules  .pnp.cjs  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.en.md  README.md  RELEASE_NOTES.md  auto-imports.d.ts  components.d.ts  crowdin.yml  env.d.ts  index.html  opencode.jsonc  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.agents/skills/README/: SKILL.md
.agents/skills/debug-logging/: SKILL.md
.agents/skills/rust-dev/: SKILL.md
.agents/skills/system-integration/: SKILL.md
.agents/skills/tauri-commands/: SKILL.md
.agents/skills/tauri-dev/: SKILL.md
.agents/skills/windows-api/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: beta.yml  build-nightly.yml  build.yml  build_nightly.yml  check.yml  crowdin.yml  nightly.yml  release.yml  test.yml
.opencode/skills/: README.md  debug-logging.md  rust-dev.md  system-integration.md  tauri-commands.md  tauri-dev.md  windows-api.md
frontend/: index.html  main.js  style.css
src/: App.vue  config.rs  env.d.ts  index.html  main.js  main.rs  main.ts  styles.css  tray.rs
src-tauri/: Cargo.toml  installer_hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.toml  it-IT.toml  ru-RU.toml  zh-CN.toml  zh-TW.toml
src-tauri/src/: cli.rs  config.rs  console.rs  dev.rs  i18n.rs  lib.rs  logger.rs  main.rs  theme.rs  theme_manager.rs  tray.rs  updater.rs
src-tauri/src/media/: mod.rs  mpris.rs  smtc.rs
src/components/: EmptyState.vue  LanguageSelector.vue  Navbar.vue  SettingsForm.vue  SettingsSkeleton.vue  ThemeCard.vue  ThemeGrid.vue  ThemeSkeleton.vue  TitleBar.vue  Toast.vue  UpdateDialog.vue
src/config/: fontawesome.ts
src/i18n/: index.ts
src/i18n/locales/: de-DE.json  en.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  nl-NL.json  ru-RU.json  zh-CN.json  zh-TW.json
src/router/: index.ts
src/stores/: config.ts  locale.ts  theme.ts  toast.ts  types.d.ts  update.ts
src/styles/: global.css  variables.css
src/types/: config.ts  theme.ts
src/utils/: index.ts
src/views/: SettingsView.vue  ThemesView.vue
