[package]
name = "smtc2web"
version = "0.1.8"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2.1"
rust-embed = "8.0"
mime_guess = "2.0"
toml = "0.8"
dirs = "5.0"
shell_exec = "0.2.1"
systray = "0.4.0"
open = "5.0"

[dependencies.windows]
version = "0.58"
features = [
    "Foundation",
    "Media_Control",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Console",
]
