[package]
edition = "2021"
name = "smtc2web"
version = "0.1.9-nightly2"

[dependencies]
dirs = "5.0"
humantime = "2.1"
mime_guess = "2.0"
open = "5.0"
rust-embed = "8.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
shell_exec = "0.2.1"
systray = "0.4.0"
tauri = {version = "2.8.5", features = ["tray-icon"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
toml = "0.8"
warp = "0.3"

[dependencies.windows]
features = [
  "Foundation",
  "Media_Control",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
]
version = "0.58"
