[package]
authors = ["AkarinLiu"]
description = "A Tauri App"
edition = "2024"
name = "smtc2web"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "smtc2web_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5.0"
humantime = "2.1"
mime_guess = "2.0"
open = "5.0"
rust-embed = "8.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
shell_exec = "0.2.1"
tauri = {version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.2"
tokio = {version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
warp = "0.3"

[dependencies.windows]
features = [
  "Foundation",
  "Foundation_Collections",
  "Media_Control",
  "Storage",
  "Storage_Streams",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
]
version = "0.58"
